fixed item price in cart when name too long
- item price in cart would wrap if item name was too long
- added min-width: fit-content class

--- a/styles/common.css
+++ b/styles/common.css
@@ -299,6 +299,10 @@
   width: fit-content;
 }
 
+.min-w-fit{
+  min-width: fit-content;
+}
+
 .gap-1 {
   gap: 1rem;
 }
